[gd_scene load_steps=3 format=3 uid="uid://bapk8ffqxb4j1"]

[ext_resource type="Script" uid="uid://5eveuotn2fjd" path="res://UI/main_menu.gd" id="1_p8ccj"]
[ext_resource type="Theme" uid="uid://2ocoy8vsxdat" path="res://assets/themes/tab_settings.tres" id="2_tk8dj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8ccj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -114.5
offset_right = 138.5
offset_bottom = 114.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tk8dj")

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
